--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <ul>
         <li><strong>Email:</strong> <a href="mailto:mythreesonsgunsafe@gmail.com">mythreesonsgunsafe@gmail.com</a></li>
         <li><strong>Phone:</strong> <a href="tel:+17192296543">+1 (719) 229-6543</a></li>
-        <li><strong>Address:</strong> [Insert your business address here], USA</li>
+        <li><strong>Address:</strong>  USA</li>
       </ul>
     </section>
 
