Rename 'Support Page' to 'Contact Us'

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </section>
 
     <section id="support">
-      <h2>Support Page</h2>
+      <h2>Contact Us</h2>
       <p>Need assistance? Our support team is here to help you with moving inquiries, quotes, or scheduling. You can reach us through any of the following channels:</p>
       <ul>
         <li><strong>Phone Support:</strong> <a href="tel:+17192296543">+1 (719) 229-6543</a></li>
